# osm-workshop-2026

./: .gitignore  README.md
.github/workflows/: publish.yml  tests.yml
app/: README.md  alembic.ini  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 0001_initial_schema.py  0002_add_park_osm_type.py  0003_remove_census_points.py  0004_add_route_geometry.py
app/scripts/: dev-setup.sh  dev-teardown.sh
app/src/parkalyzer/: config.py  constants.py  errors.py  main.py  ors.py
app/src/parkalyzer/commands/: db.py  parks.py  report.py  routes.py
app/src/parkalyzer/db/: __init__.py  connection.py  models.py
app/tests/: conftest.py
app/tests/integration/: conftest.py  test_end_to_end.py  test_migrations.py  test_parks.py  test_report.py  test_routes.py
app/tests/unit/: test_config.py  test_errors.py  test_ors_client.py  test_routes.py
slides/: .gitignore  _brand.yml  index.qmd  watch.sh
