[project]
authors = [{name = "Travis Hathaway", email = "travis.j.hathaway@gmail.com"}]
dependencies = []
name = "app"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "gis-forge"]
platforms = ["osx-arm64", "linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
app = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ors-launcher = ">=0.1.0,<0.2"
osmprj = ">=0.3.0,<0.4"
pg-helper = ">=0.2.0,<0.3"
postgresql = ">=18.4,<19"
postgis = ">=3.6.4,<4"
python = ">=3.14.6,<3.15"
click = ">=8.4.2,<9"
alembic = ">=1.18.5,<2"
sqlalchemy = ">=2.0.51,<3"
sqlalchemy-with-postgresql-psycopg = ">=2.0.51,<3"
rich = ">=15.0.0,<16"
zensus2pgsql = ">=0.2.1,<0.3"
